css/style.css
/* Whole document styles entire website */

body {
    font-family: 'Poppins', sans-serif;
    font-size: 11pt;
    padding: 0;
    margin: 0;
}

a:link,
a:visited {
    color: steelblue;
    text-decoration: none;
    display: inline-block;
}

a:hover,
a:active {
    background-color: tomato;
    color: white;
}

/* Element styles */

h1 {
    font-family: 'Montserrat', sans-serif;
    font-size: 30pt;
    text-align: center;
    padding-top: 20px;
}

h2, .navTitles {
    font-family: 'Montserrat', sans-serif;
    font-size: 16pt;
    color: grey;
    line-height: 0;
}

li {
    list-style: none;
}

header {
    text-align: center;
}

footer {
    color: white;
    font-size: medium;
    padding: 50px;
    text-align: center;
}

body > div, .backgroundHome {
    background: url("https://picsum.photos/id/415/5184/3456") no-repeat fixed;
    background-size: cover;
    background-position: center;
    min-height: 100vh;
}

.backgroundMessage {
    background: url("https://picsum.photos/id/160/3200/2119") no-repeat fixed;
    background-size: cover; background-position-y: bottom; background-position: center; min-height: 100vh;
}

.backgroundBlog {
    background: url("https://picsum.photos/id/173/1200/737") no-repeat fixed;
    background-size: cover; background-position: center; min-height: 100vh;
}

/* Color squares on left */

#goldSquare {
    width: 10px;
    height: 10px;
    position: fixed;
    background-color: gold;
    left: 160px;
    top: 230px;
    /* transform: translateY(30px);
    transition: 2.2s all ease; */
    z-index: 999;
    -webkit-animation-name: gold;
    -webkit-animation-duration: 2.2s;
    animation-name: gold;
    animation-duration: 2.2s;
    /* animation-delay: .8s; */
    animation-timing-function: ease;
}

#tomatoSquare {
    width: 10px;
    height: 10px;
    position: fixed;
    background-color: tomato;
    left: 180px;
    top: 230px;
    /* transform: translateY(30px);
    transition: 1.5s all ease; */
    z-index: 999;
    -webkit-animation-name: tomato;
    -webkit-animation-duration: 1.5s;
    animation-name: tomato;
    animation-duration: 1.5s;
    /* animation-delay: .8s; */
    animation-timing-function: ease;
}

#blueSquare {
    width: 10px;
    height: 10px;
    position: fixed;
    background-color: steelblue;
    left: 200px;
    top: 230px;
    /* transform: translateY(30px);
    transition: 0.8s all ease; */
    z-index: 999;
    -webkit-animation-name: blueS;
    -webkit-animation-duration: .8s;
    animation-name: blueS;
    animation-duration: 0.8s;
    /* animation-delay: .8s; */
    animation-timing-function: ease;
  }

@-webkit-keyframes blueS {
    from {top: 180px}
    to {top: 230px}
}
  /* Standard syntax */
@keyframes blueS {
    from {top: 180px}
    to {top: 230px}
}

@-webkit-keyframes tomato {
    from {top: 180px}
    to {top: 230px}
}
@keyframes tomato {
    from {top: 180px}
    to {top: 230px}
}

@-webkit-keyframes gold {
    from {top: 180px}
    to {top: 230px}
}
@keyframes gold {
    from {top: 180px}
    to {top: 230px}
}
  /* Color squares ENDS */

/* Home page */

#about {
    padding: 0 30vw 0 30vw;
    min-width: 250px;
}

#subtitle {
    font-size: larger;
    text-align: center;
    color: gray;
    margin-top: -50px;
    margin-bottom: 50px;
}

#setBackground, #setTimeoutTransitions {
    display: none;
}

div.blog-flex {
    padding: 20px;
    margin-top: -40px;
    -webkit-animation-name: gallery;
    -webkit-animation-duration: 1.5s;
    animation-name: gallery;
    animation-duration: 1.5s;
    /* animation-delay: .8s; */
    animation-timing-function: ease;
}

@-webkit-keyframes gallery {
    0% {transform: translateY(10px)}
    30% {transform: translateY(40px)}
    100% {transform: translateY(0px)}
}
@keyframes gallery {
    0% {transform: translateY(10px)}
    30% {transform: translateY(40px)}
    100% {transform: translateY(0px)}
}

/* Nav Bar */

nav {
    height: 200px;
}

#portfolio {
    background: rgba(255, 255, 255, 0.6);
    padding: 20px;
    position: fixed;
    left: 0;
    top: 0;
    width: 160px;
    height: 160px;
    z-index: 2;
}

#contact {
    background: rgba(255, 255, 255, 0.6);
    padding: 20px;
    position: fixed;
    right: 0;
    top: 0;
    width: 160px;
    height: 160px;
    z-index: 3;
}

hr {
    border: none;
    border-top: 1px dotted steelblue;
    height: 5px;
}

figure {
    text-align: center;
    font-style: italic;
    font-size: 10pt;
    line-height: inherit;
    border: thin rgb(232, 232, 232) solid;
    padding: 5px;
    margin: 10px;
    max-width: 200px;
}

nav>figure {
    font-style: inherit;
}

/* Nav ENDS */

/* Contact form */

#profile {
    position: fixed;
    left: 200px;
    top: 110px;
    width: 120px;
    height: 120px;
    border-radius: 100px;
    /* background-image: url("../images/profile.jpg"); */
    background-size: cover;
    border: 5px solid white;
    z-index: 3;
    -webkit-animation-name: profile;
    -webkit-animation-duration: 1.5s;
    animation-name: profile;
    animation-duration: 1.5s;
    /* animation-delay: .8s; */
    animation-timing-function: ease;
}

@-webkit-keyframes profile {
    0% {transform: translateY(-10px)}
    30% {transform: translateY(-30px)}
    100% {transform: translateY(0px)}
}
@keyframes profile {
    0% {transform: translateY(-10px)}
    30% {transform: translateY(-30px)}
    100% {transform: translateY(0px)}
}

#marketing {
    opacity: 0.7;
}

.submit-reset {
    text-align: center;
    margin: 30px;
    opacity: 0.7;
}

button {
    padding: 7px 20px 7px 20px;
}

[type="reset"] {
    color: gray;
}

[type="submit"] {
    background-color: steelblue;
    color: #fff;
}

.contact-form input, select, textarea {
    opacity: 0.4;
}

.contact-form #marketing, input[type="submit"], input[type="reset"], input[type="radio"]  {
    opacity: 0.7;
}

.contact-form > .container {
    color: lightgray;
}

label {
    margin: 10px 0 10px 0;
}

form>div>span {
    padding: 5px 5px 5px 0;
}

/* Blog page */

.blog-flex {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}

figure>a>img {
    width: 200px;
    height: 200px;
}

.blogcaption {
    font-style: normal;
    color: white;
    text-align: left;
}

.container {
    margin: auto;
    padding: 20px;
    min-width: 200px;
    max-width: 900px;
    line-height: 1.5;
}

/* Contact form */

.form {
    max-width: 730px;
    padding-top: 30px;
}

.flex {
    display: flex;
}

.flex--justify {
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.flex--evenly {
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
}

.flex--column {
    flex-direction: column;
}

.flex--end {
    justify-content: flex-end;
}

form>span {
    margin-right: 20px;
}

input {
    max-width: 200px;
}

/* Misc styles */

p>a {
    line-height: 1.2;
}

p {
    line-height: 1.5;
}

i {
    font-size: 1.2em;
}

/* Reposnsive mobile styles */

@media screen and (max-width: 450px) {
    #portfolio {
        padding: 10px;
        position: absolute;
        width: 120px;
        height: 180px;
    }
    #contact {
        padding: 10px;
        position: absolute;
        width: 120px;
        height: 180px;
    }

    #goldSquare {
        left: 60px;
        top: 230px;
        position: absolute;
    }
    #tomatoSquare {
        left: 80px;
        top: 230px;
        position: absolute;
    }
    #blueSquare {
        left: 100px;
        top: 230px;
        position: absolute;
    }

    #about {
        padding: 0 20px 0 30px;
        z-index: 999;
    }

    figure>span {
        line-height: 0;
        font-size: 1.6em;
        margin-top: -5px;
    }

    .blog, .contact-form {
        background-position: center;
    }
}

/* Contact form profile picture */

@media screen and (max-width: 540px) {
    #profile {
        position: absolute;
        top: 180px;
        left: -20px;
        width: 70px;
        height: 70px;
        border: 3px solid white;
        z-index: 3;
    }
    .flex--end {
        flex-direction: column;
    }
}

